qt/multimedia/gen_qmedianetworkaccesscontrol.h

class QMediaNetworkAccessControl;
class QMetaObject;
class QNetworkConfiguration;
typedef struct QMediaNetworkAccessControl QMediaNetworkAccessControl;
typedef struct QMetaObject QMetaObject;
typedef struct QNetworkConfiguration QNetworkConfiguration;
QMetaObject* QMediaNetworkAccessControl_metaObject(const QMediaNetworkAccessControl* self);
void* QMediaNetworkAccessControl_metacast(QMediaNetworkAccessControl* self, const char* param1);
int QMediaNetworkAccessControl_metacall(QMediaNetworkAccessControl* self, int param1, int param2, void** param3);
struct miqt_string QMediaNetworkAccessControl_tr(const char* s);
struct miqt_string QMediaNetworkAccessControl_trUtf8(const char* s);
void QMediaNetworkAccessControl_setConfigurations(QMediaNetworkAccessControl* self, struct miqt_array /* of QNetworkConfiguration* */  configuration);
QNetworkConfiguration* QMediaNetworkAccessControl_currentConfiguration(const QMediaNetworkAccessControl* self);
void QMediaNetworkAccessControl_configurationChanged(QMediaNetworkAccessControl* self, QNetworkConfiguration* configuration);
void QMediaNetworkAccessControl_connect_configurationChanged(QMediaNetworkAccessControl* self, intptr_t slot);
struct miqt_string QMediaNetworkAccessControl_tr2(const char* s, const char* c);
struct miqt_string QMediaNetworkAccessControl_tr3(const char* s, const char* c, int n);
struct miqt_string QMediaNetworkAccessControl_trUtf82(const char* s, const char* c);
struct miqt_string QMediaNetworkAccessControl_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QMediaNetworkAccessControl_staticMetaObject();
void QMediaNetworkAccessControl_delete(QMediaNetworkAccessControl* self);